Recreate the main project as a .NET Standard Library

--- a/LightifyMeTests/LightifyMeTests.csproj
+++ b/LightifyMeTests/LightifyMeTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LightifyMe\LightifyMe.csproj" />
+    <ProjectReference Include="..\LightifyMeCore\LightifyMeCore.csproj" />
   </ItemGroup>
 
 </Project>
